--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -19,11 +19,11 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
+      - name: Install deps
+      - run: yarn install
 
       - name: Lint
         run: yarn lint
 
       - name: Test
-        run: yarn test --ci --coverage --maxWorkers=2
+        run: yarn test
