--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     needs: [quality]
     strategy:
       matrix:
-        node: ['10.x', '12.x', '14.x', '15.x']
+        node: ['12.x', '14.x', '15.x']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
