--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ['10.x', '12.x', '14.x', '15.x']
+        node: ['12.x', '14.x', '15.x']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
