--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,23 +1,25 @@
 name: CI
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: '*'
+
 jobs:
   quality:
-    name: Check lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
-
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
-        node: ['12.x', '14.x', '15.x']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        node-version: [14.x, 16.x]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-
-      - name: Use Node ${{ matrix.node }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
       - run: yarn install
-      - run: yarn lint
       - run: yarn test
