fix(eslintrc): add react-hooks plugin to eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "extends": [
     "standard",
     "standard-react",
+    "plugin:react-hooks/recommended",
     "plugin:prettier/recommended",
     "prettier/standard",
     "prettier/react",
