--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,24 @@
-
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
+/.pnp
+.pnp.js
 
-# builds
-build
-dist
-.rpt2_cache
+# testing
+/coverage
+
+# production
+/packages/*/**/dist
+/packages/*/errors
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
