--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "scripts": {
     "build": "lerna run build",
     "test": "jest",
-    "commit": "cz"
+    "commit": "cz",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@types/react": "^17.0.38",
@@ -28,13 +30,19 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/react": "^6.4.9",
     "@testing-library/jest-dom": "^5.16.1",
+    "cz-conventional-changelog": "^3.3.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "babel-jest": "^27.4.5",
+    "babel-loader": "^8.2.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "esbuild": "^0.14.8",
@@ -44,16 +52,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.5",
+    "husky": "^4.3.8",
     "jest": "^27.4.5",
     "lerna": "^4.0.0",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4",
-    "husky": "^4.3.8",
-    "lint-staged": "^11.2.6"
+    "typescript": "^4.5.4"
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
