--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -2,7 +2,9 @@
   "name": "@dorai-ui/switch",
   "version": "0.0.0",
   "description": "switch component for dorai-ui",
-  "main": "lib/index.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "ISC",
@@ -22,7 +24,7 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "scripts": {
-    "build": "node ./esbuild.js"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "dependencies": {
     "@dorai-ui/utils": "^0.0.0",
