--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "ISC",
-  "main": "lib/index.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,7 +17,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "node ./esbuild.js"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "publishConfig": {
     "access": "public"
