--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "ISC",
-  "main": "lib/index.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -22,7 +24,7 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "scripts": {
-    "build": "node ./esbuild.js"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
