--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "dorai-ui",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "description": "Dorai-ui offers a bunch of accessible, styleless, dry react components.",
   "author": "watife",
   "private": true,
-  "workspaces": [
-    "./packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "license": "MIT",
   "repository": "watife/dorai-ui",
-  "engines": {
-    "node": ">=12"
-  },
   "scripts": {
     "build": "lerna run build",
     "test": "jest",
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
-  },
-  "dependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -35,16 +28,18 @@
     "@storybook/addon-links": "^6.4.9",
     "@storybook/react": "^6.4.9",
     "@testing-library/jest-dom": "^5.16.1",
-    "cz-conventional-changelog": "^3.3.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.14.8",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
@@ -58,6 +53,9 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
   "config": {
