--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -1,29 +1,28 @@
 {
   "name": "@dorai-ui/portal",
   "version": "0.0.0",
-  "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
+  "description": "dorai-ui accessible portal",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
-  "license": "ISC",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "license": "MIT",
+  "src": "lib/index.ts",
+  "main": "dist/portal.cjs.js",
+  "module": "dist/portal.esm.js",
   "types": "dist/index.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
+  "files": [
+    "dist",
+    "lib"
+  ],
   "dependencies": {
     "@dorai-ui/utils": "^0.0.0"
+  },
+  "peerDependencies": {
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "scripts": {
     "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
