--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -22,11 +22,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
-      - name: Instal Dependencies
+      - name: Install Dependencies
         run: yarn install
 
       - name: Build Packages
         run: yarn build
+
+      - name: Check Linting
+        run: yarn lint
 
       - name: Run Tests
         run: yarn test
