ci: preparing for release

--- a/packages/description/package.json
+++ b/packages/description/package.json
@@ -26,7 +26,8 @@
     "react-dom": "16.13.1"
   },
   "scripts": {
-    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly",
+    "semantic-release": "semantic-release --branches main"
   },
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
