--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,7 +19,8 @@
     "README.md"
   ],
   "scripts": {
-    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly",
+    "semantic-release": "semantic-release --branches main"
   },
   "peerDependencies": {
     "react": "16.13.1",
