--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dorai-ui",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "Accessible, unstyled, and fully functional react component library for building better design systems",
   "author": "watife",
   "private": true,
@@ -17,7 +17,8 @@
     "test": "jest",
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "semantic-release": "semantic-release --branches main"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -58,6 +59,8 @@
     "prettier": "^2.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "semantic-release": "^18.0.1",
+    "semantic-release-monorepo": "^7.0.5",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
