--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -18,6 +18,9 @@
     "lib",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "node ./esbuild.js && tsc --emitDeclarationOnly",
     "semantic-release": "semantic-release --branches main"
