--- a/packages/description/package.json
+++ b/packages/description/package.json
@@ -14,6 +14,9 @@
     "lib",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/watife/dorai-ui.git"
