--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -22,7 +22,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dorai-ui/utils": "^0.0.0"
+    "@dorai-ui/utils": "0.0.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
