--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -22,9 +22,9 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "dependencies": {
-    "@dorai-ui/description": "^0.0.0",
-    "@dorai-ui/portal": "^0.0.0",
-    "@dorai-ui/utils": "^0.0.0"
+    "@dorai-ui/description": "0.0.0",
+    "@dorai-ui/portal": "0.0.0",
+    "@dorai-ui/utils": "0.0.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
