--- a/packages/description/package.json
+++ b/packages/description/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/description",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "dependencies": {
-    "@dorai-ui/utils": "1.0.0"
+    "@dorai-ui/utils": "^1.0.1"
   },
   "peerDependencies": {
     "react": "16.13.1",
