--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/utils",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "dorai-ui utils",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
@@ -32,6 +32,5 @@
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
   },
-  "homepage": "https://github.com/watife/dorai-ui#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/watife/dorai-ui#readme"
 }
