--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -15,11 +15,13 @@ jobs:
         os: [ubuntu-latest, windows-latest]
 
     steps:
+
+      - name: Checkout
       - uses: actions/checkout@v2
         with:
-          persist-credentials: false
-      - name: Checkout
-        uses: actions/setup-node@v2
+          token: ${{ secrets.SCRIPT_TOKEN }}
+
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
