--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,27 +1,24 @@
-name: CI
+name: Node.js CI
 on:
-  push:
-    branches: [main]
   pull_request:
     branches: '*'
 
 jobs:
   quality:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-        os: [ubuntu-latest, windows-latest]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-
-      - name: Checkout
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.SCRIPT_TOKEN }}
 
-      - uses: actions/setup-node@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
