--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/label",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Internal Label component for dorai-ui",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "dependencies": {
-    "@dorai-ui/utils": "1.0.3"
+    "@dorai-ui/utils": "^1.0.4"
   },
   "peerDependencies": {
     "react": "16.13.1",
