--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/modal",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "@dorai-ui accessible modal",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
@@ -22,9 +22,9 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "dependencies": {
-    "@dorai-ui/description": "1.0.3",
-    "@dorai-ui/portal": "1.0.3",
-    "@dorai-ui/utils": "1.0.3"
+    "@dorai-ui/description": "^1.0.4",
+    "@dorai-ui/portal": "^1.0.4",
+    "@dorai-ui/utils": "^1.0.4"
   },
   "peerDependencies": {
     "react": "16.13.1",
