--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/switch",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "switch component for dorai-ui",
   "keywords": [],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
@@ -26,8 +26,8 @@
     "semantic-release": "semantic-release --branches main"
   },
   "dependencies": {
-    "@dorai-ui/label": "1.0.3",
-    "@dorai-ui/utils": "1.0.3"
+    "@dorai-ui/label": "^1.0.4",
+    "@dorai-ui/utils": "^1.0.4"
   },
   "peerDependencies": {
     "react": "16.13.1",
