--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,6 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Publish Packages
 
 on:
-  workflow_run:
-    workflows: ['quality']
-    types:
-      - completed
   push:
     branches: [main]
 
@@ -16,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     if: ${{ github.ref == 'refs/heads/main' }}
+
+    strategy:
+      matrix:
+        node-version: [14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -40,5 +37,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          yarn release
+        run: yarn release
