--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "deploy": "yarn build-storybook && gh-pages -d storybook-static",
     "semantic-release": "semantic-release --branches main",
-    "release": "auto shipit"
+    "release": "auto shipit && yarn deploy"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.5",
+    "gh-pages": "^3.2.3",
     "husky": "^4.3.8",
     "jest": "^27.4.5",
     "lerna": "^4.0.0",
