--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -2,7 +2,13 @@
   "name": "@dorai-ui/switch",
   "version": "1.0.4",
   "description": "switch component for dorai-ui",
-  "keywords": [],
+  "keywords": [
+    "react",
+    "react-component",
+    "dorai-ui",
+    "switch",
+    "toggle"
+  ],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "ISC",
   "repository": {
