--- a/packages/description/package.json
+++ b/packages/description/package.json
@@ -2,7 +2,12 @@
   "name": "@dorai-ui/description",
   "version": "1.0.4",
   "description": "dorai-ui description",
-  "keywords": [],
+  "keywords": [
+    "react",
+    "react-component",
+    "dorai-ui",
+    "description"
+  ],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "ISC",
   "src": "lib/index.ts",
