--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -2,7 +2,13 @@
   "name": "@dorai-ui/modal",
   "version": "1.0.4",
   "description": "@dorai-ui accessible modal",
-  "keywords": [],
+  "keywords": [
+    "react",
+    "react-component",
+    "dorai-ui",
+    "modal",
+    "dialog"
+  ],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "ISC",
   "src": "lib/index.ts",
