feat(components): add composed component package

--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -9,7 +9,7 @@
     "accordion"
   ],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "main": "dist/accordion.cjs.js",
   "module": "dist/accordion.esm.js",
   "types": "dist/index.d.ts",
