--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+
+      - name: Prepare repository
+        run: git fetch --unshallow --tags
 
       - name: Install Dependencies
         run: yarn install
@@ -31,10 +33,9 @@ jobs:
       - name: Build Packages
         run: yarn build
 
-      - run: git fetch --unshallow --tags
-
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn release
+        run: |
+          yarn release
