--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,6 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
-    if: ${{ github.ref == 'refs/heads/main' }}
-
     strategy:
       matrix:
         node-version: [14.x]
@@ -19,23 +17,27 @@ jobs:
         with:
           token: ${{ secrets.SCRIPT_TOKEN }}
 
+      - name: Prepare repository
+        run: git fetch --unshallow --tags
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Prepare repository
-        run: git fetch --unshallow --tags
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Build Packages
-        run: yarn build
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: yarn-deps-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            yarn-deps-${{ hashFiles('yarn.lock') }}
 
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          yarn release
+          yarn install --frozen-lockfile
+          yarn build
+          npx auto shipit
