--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,7 +35,8 @@
     "@dorai-ui/portal": "^1.0.5",
     "@dorai-ui/switch": "^1.0.5",
     "@dorai-ui/tabs": "^1.0.6",
-    "@dorai-ui/utils": "^1.0.5"
+    "@dorai-ui/utils": "^1.0.5",
+    "@dorai-ui/alert": "^0.1.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
