--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/components",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "@dorai-ui composed components",
   "keywords": [
     "dorai-ui",
@@ -31,12 +31,12 @@
   },
   "dependencies": {
     "@dorai-ui/accordion": "^1.0.5",
+    "@dorai-ui/alert": "^0.1.0",
     "@dorai-ui/modal": "^1.0.6",
     "@dorai-ui/portal": "^1.0.5",
     "@dorai-ui/switch": "^1.0.5",
     "@dorai-ui/tabs": "^1.0.6",
-    "@dorai-ui/utils": "^1.0.5",
-    "@dorai-ui/alert": "^0.1.0"
+    "@dorai-ui/utils": "^1.0.5"
   },
   "peerDependencies": {
     "react": "16.13.1",
