--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -23,8 +23,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "node ./esbuild.js && tsc --emitDeclarationOnly",
-    "semantic-release": "semantic-release --branches main"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "repository": {
     "type": "git",
