--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,8 +27,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "node ./esbuild.js && tsc --emitDeclarationOnly",
-    "semantic-release": "semantic-release --branches main"
+    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "peerDependencies": {
     "react": "16.13.1",
