--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -36,7 +36,8 @@
     "@dorai-ui/portal": "^1.1.0",
     "@dorai-ui/switch": "^1.1.0",
     "@dorai-ui/tabs": "^1.1.0",
-    "@dorai-ui/utils": "^1.1.0"
+    "@dorai-ui/utils": "^1.1.0",
+    "@dorai-ui/alert-dialog": "0.0.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
