--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorai-ui/components",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "@dorai-ui composed components",
   "keywords": [
     "dorai-ui",
@@ -32,12 +32,12 @@
   "dependencies": {
     "@dorai-ui/accordion": "^1.1.0",
     "@dorai-ui/alert": "^0.2.0",
+    "@dorai-ui/alert-dialog": "^0.1.0",
     "@dorai-ui/modal": "^1.1.1",
     "@dorai-ui/portal": "^1.1.0",
     "@dorai-ui/switch": "^1.1.0",
     "@dorai-ui/tabs": "^1.1.0",
-    "@dorai-ui/utils": "^1.1.0",
-    "@dorai-ui/alert-dialog": "0.0.0"
+    "@dorai-ui/utils": "^1.1.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
