--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -37,7 +37,8 @@
     "@dorai-ui/portal": "^1.2.0",
     "@dorai-ui/switch": "^1.2.0",
     "@dorai-ui/tabs": "^1.2.0",
-    "@dorai-ui/utils": "^1.2.0"
+    "@dorai-ui/utils": "^1.2.0",
+    "@dorai-ui/radio-group": "0.0.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
