--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -16,8 +16,8 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "src": "lib/index.ts",
-  "main": "dist/switch.cjs.js",
-  "module": "dist/switch.esm.js",
+  "main": "dist/cjs/switch.js",
+  "module": "dist/esm/switch.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
