--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -12,8 +12,8 @@
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "MIT",
   "src": "lib/index.ts",
-  "main": "dist/modal.cjs.js",
-  "module": "dist/modal.esm.js",
+  "main": "dist/cjs/modal.js",
+  "module": "dist/esm/modal.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
