feat: bump version of react to 18.0

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -30,8 +30,8 @@
     "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
