--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dorai-ui",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "description": "Accessible, unstyled, and fully functional react component library for building better design systems",
   "author": "watife",
   "private": true,
@@ -61,8 +61,8 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
