--- a/packages/alert-dialog/package.json
+++ b/packages/alert-dialog/package.json
@@ -34,8 +34,8 @@
     "@dorai-ui/utils": "^1.2.1"
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
