--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -33,8 +33,8 @@
     "@dorai-ui/utils": "^1.2.1"
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "scripts": {
     "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
