build: migrate from esbuild to preconstruct for building the packages

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,4 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           yarn install --frozen-lockfile
-          yarn build
-          npx auto shipit
+          yarn release
