--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -11,10 +11,10 @@
   ],
   "author": "Boluwatife Fakorede <watifefakorede@gmail.com>",
   "license": "MIT",
-  "src": "lib/index.ts",
-  "main": "dist/cjs/modal.js",
-  "module": "dist/esm/modal.js",
-  "types": "dist/index.d.ts",
+  "src": "src/index.ts",
+  "main": "dist/dorai-ui-modal.cjs.js",
+  "module": "dist/dorai-ui-modal.esm.js",
+  "types": "dist/dorai-ui-modal.cjs.d.ts",
   "files": [
     "dist",
     "lib",
@@ -35,9 +35,6 @@
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
-  },
-  "scripts": {
-    "build": "node ./esbuild.js && tsc --emitDeclarationOnly"
   },
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
